@@ -14,10 +14,10 @@ index c972b3bc0b..18b5a6ee4f 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index 3b0dac8297..7200b0433c 100644
+index 72bb4fc50c..ff22c268ac 100644
 --- a/Changes
 +++ b/Changes
-@@ -782,11 +782,6 @@ OCaml 5.0
+@@ -789,11 +789,6 @@ OCaml 5.0
    (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
     Xavier Leroy)
  
@@ -29,7 +29,7 @@ index 3b0dac8297..7200b0433c 100644
  - #11516, #11524: Fix the `deprecated_mutable` attribute.
    (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
  
-@@ -815,6 +810,30 @@ OCaml 5.0
+@@ -822,6 +817,30 @@ OCaml 5.0
    (Gabriel Scherer, review by Jacques Garrigue and Florian Angeletti,
     report by Yaron Minsky)
  
@@ -60,7 +60,7 @@ index 3b0dac8297..7200b0433c 100644
  OCaml 4.14.0 (28 March 2022)
  ----------------------------
  
-@@ -850,13 +869,13 @@ OCaml 4.14.0 (28 March 2022)
+@@ -857,13 +876,13 @@ OCaml 4.14.0 (28 March 2022)
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -76,7 +76,7 @@ index 3b0dac8297..7200b0433c 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -963,6 +982,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -970,6 +989,9 @@ OCaml 4.14.0 (28 March 2022)
  - #10464: Add List.is_empty.
    (Craig Ferguson, review by David Allsopp)
  
@@ -86,7 +86,7 @@ index 3b0dac8297..7200b0433c 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -1222,6 +1244,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1229,6 +1251,9 @@ OCaml 4.14.0 (28 March 2022)
  
  ### Build system:
  
@@ -10055,7 +10055,7 @@ index 0000000000..29c099ab76
 +     fi
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..c74f026db7
+index 0000000000..fb80184ce1
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,10016 @@
@@ -10075,10 +10075,10 @@ index 0000000000..c74f026db7
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index 3b0dac8297..7200b0433c 100644
++index 72bb4fc50c..ff22c268ac 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -782,11 +782,6 @@ OCaml 5.0
++@@ -789,11 +789,6 @@ OCaml 5.0
 +   (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
 +    Xavier Leroy)
 + 
@@ -10090,7 +10090,7 @@ index 0000000000..c74f026db7
 + - #11516, #11524: Fix the `deprecated_mutable` attribute.
 +   (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
 + 
-+@@ -815,6 +810,30 @@ OCaml 5.0
++@@ -822,6 +817,30 @@ OCaml 5.0
 +   (Gabriel Scherer, review by Jacques Garrigue and Florian Angeletti,
 +    report by Yaron Minsky)
 + 
@@ -10121,7 +10121,7 @@ index 0000000000..c74f026db7
 + OCaml 4.14.0 (28 March 2022)
 + ----------------------------
 + 
-+@@ -850,13 +869,13 @@ OCaml 4.14.0 (28 March 2022)
++@@ -857,13 +876,13 @@ OCaml 4.14.0 (28 March 2022)
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -10137,7 +10137,7 @@ index 0000000000..c74f026db7
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -963,6 +982,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -970,6 +989,9 @@ OCaml 4.14.0 (28 March 2022)
 + - #10464: Add List.is_empty.
 +   (Craig Ferguson, review by David Allsopp)
 + 
@@ -10147,7 +10147,7 @@ index 0000000000..c74f026db7
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -1222,6 +1244,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1229,6 +1251,9 @@ OCaml 4.14.0 (28 March 2022)
 + 
 + ### Build system:
 + 
